fix 2612: Fix invisible dropdown options

--- a/packages/apps/spaces/ui/form/select/components/select.module.scss
+++ b/packages/apps/spaces/ui/form/select/components/select.module.scss
@@ -6,7 +6,6 @@
   display: flex;
   align-items: center;
   font-size: inherit;
-  overflow: hidden;
 }
 
 .dropdownInput {
